--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <logo href="/src/assets/logo.png" />
     <title>CallMeGrowth | Digital Marketing Agency</title>
     <meta name="description" content="CallMeGrowth - Where data meets creativity. We help ambitious brands grow through performance-driven digital marketing." />
     <meta name="author" content="CallMeGrowth" />
