--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <logo href="/src/assets/logo.png" />
-    <title>CallMeGrowth | Digital Marketing Agency</title>
+    <link rel="icon" href="/CallMeGrowth/assets/logo-C_chFki2.png" />
+    <title>CallMeGrowth</title>
     <meta name="description" content="CallMeGrowth - Where data meets creativity. We help ambitious brands grow through performance-driven digital marketing." />
     <meta name="author" content="CallMeGrowth" />
 
