--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/CallMeGrowth/assets/logo-C_chFki2.png" />
+    <link rel="icon" type="image/png" href="/CallMeGrowth/assets/logo-C_chFki2.png" sizes="32x32" />
+    <link rel="apple-touch-icon" href="/CallMeGrowth/assets/logo-C_chFki2.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
     <title>CallMeGrowth</title>
     <meta name="description" content="CallMeGrowth - Where data meets creativity. We help ambitious brands grow through performance-driven digital marketing." />
     <meta name="author" content="CallMeGrowth" />
